<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hygeia</string>
    <string name="app_name_lower">hygeia! 👋</string>
    <string name="app_version">Copyright © 2023. Hygeia. All rights reserved.</string>
    <string name="app_catchphrase">Your access to your hygiene vendo buddy.</string>
    <string name="h1_welcome">Hi! Welcome to</string>
    <string name="h1_create_account1">Start building your</string>
    <string name="h1_create_account2">Stay connected and</string>
    <string name="h1_create_account3">Check your account</string>
    <string name="h1_forgot_password">Let\'s recover your</string>
    <string name="h1_reset_password">Create your new</string>
    <string name="h1_otp">Verify one-time</string>
    <string name="h1_account_colored">account</string>
    <string name="h1_profile_colored">profile</string>
    <string name="h1_protected_colored">protected</string>
    <string name="h1_details_colored">details</string>
    <string name="h1_password_colored">password</string>
    <string name="h1_send_money">Send Money</string>
    <string name="h1_request_money">Request Balance</string>
    <string name="h1_sales">Sales</string>
    <string name="h1_pin_colored">PIN</string>
    <string name="h1_all_transactions">Transaction History</string>
    <string name="h1_user_info">My information</string>
    <string name="h1_change_password">Update password</string>
    <string name="h1_vending_machines">Vending Machines</string>
    <string name="h1_vending_name">Hygeia Vendo</string>
    <string name="h1_vendo_details">Vendo Details</string>
    <string name="h1_vendo_history">Vendo Logs</string>
    <string name="h1_change_wallet_background">Change Wallet</string>
    <string name="h1_change_wallet_background_colored">Background</string>
    <string name="h1_user_accounts">User Accounts</string>
    <string name="h1_blog">Hygeia Blog</string>
    <string name="h1_blog_add">New Blog Post</string>
    <string name="h1_blog_edit">Edit Blog Post</string>
    <string name="h4_all_transactions">Transaction History</string>
    <string name="h6_personal_information">Personal Information</string>
    <string name="h6_account_information">Contact Information</string>
    <string name="h6_actions">Actions</string>
    <string name="h6_latest_transactions">Latest Transactions</string>
    <string name="h6_available_products">Available Products</string>
    <string name="h6_products">Products</string>
    <string name="h6_wallpapers">Wallpaper Selection</string>
    <string name="or">Or</string>
    <string name="desc_login">Enter your login credentials below — so you can access your hygiene vendo buddy.</string>
    <string name="desc_create_account_part1">Kindly provide your personal details — so other users can connect and engage with you.</string>
    <string name="desc_create_account_part2">Please enter your contact details and secure your account — your email and password will serve as your login credentials.</string>
    <string name="desc_create_account_part3">Please take a moment to review your account details before proceeding. We will then send a one-time pin to your number for a quick verification.</string>
    <string name="desc_forgot_password">Kindly enter the email or phone number associated with your account to initiate the password renewal process.  We will then send a one-time pin to your number for a quick verification.</string>
    <string name="desc_otp">Please enter the one-time PIN (OTP) that we sent to your number </string>
    <string name="desc_update_password">Password must be at least 8 characters long with combinations of uppercase letters, lowercase letters, numbers, and symbols.</string>
    <string name="desc_wallet_balance">Wallet Balance</string>
    <string name="desc_stars_balance">Hygeia Stars Balance</string>
    <string name="desc_send_money">Send money to your desired recipient. To initiate the transaction, please provide the recipient\'s phone number and the amount you wish to send.</string>
    <string name="desc_request_money">To initiate the request, please provide the amount and your password for security purposes. This transaction is recorded.</string>
    <string name="desc_transaction_history">View all your transactions in one place. Use the chips below to filter your transactions.</string>
    <string name="desc_vending_machines">Discover all the available vending machine in one place.</string>
    <string name="desc_user_info">View your profile and account details at a glance.</string>
    <string name="desc_vending_location">Located at: </string>
    <string name="desc_sub_total">Sub Total</string>
    <string name="desc_vat">VAT</string>
    <string name="desc_grand_total">Grand Total</string>
    <string name="desc_total_stars">Total of Hygeia Stars to Spend</string>
    <string name="desc_vendo_num">Vendo #</string>
    <string name="desc_items">Item(s):</string>
    <string name="desc_empty_transaction">Your transaction history is feeling a little lonely at the moment.</string>
    <string name="desc_empty_blog">There are no new posts or updates as of now.</string>
    <string name="desc_empty_history">History of this machine is currently empty.</string>
    <string name="desc_empty_user">There are no user records with your search input. Check if your input is correct.</string>
    <string name="desc_vendo_slot_status">Vendo slot status</string>
    <string name="desc_wallet_background">Enhance your wallet\'s visual appeal by customizing its background wallpaper. Choose from a wide range of stunning designs to personalize your digital experience.</string>
    <string name="desc_sales">Track your sales and gain insights into your total earnings.</string>
    <string name="desc_total_earnings">Total Earnings</string>
    <string name="desc_total_products">Total Products Sold</string>
    <string name="desc_user_accounts">Here are all the user accounts of Hygeia.</string>
    <string name="desc_blog">Keep an eye out for the most recent updates!</string>
    <string name="desc_blog_add">You can select what type of blog you will post by choosing from one of the options below:</string>
    <string name="desc_blog_edit">You can change the type of the blog by choosing from one of the options below:</string>
    <string name="desc_blog_visible">Blog post visibility</string>
    <string name="desc_vendo_history">Here are all the updates and changes made by the administrators for this vendo machine.</string>
    <string name="title_email">Email</string>
    <string name="title_email_phone_number">Email or Phone Number</string>
    <string name="title_password">Password</string>
    <string name="title_password_old">Current password</string>
    <string name="title_password_new">New password</string>
    <string name="title_password_confirm">Confirm password</string>
    <string name="title_otp">One-Time PIN</string>
    <string name="title_first_name">First name</string>
    <string name="title_last_name">Last name</string>
    <string name="title_full_name">Full name</string>
    <string name="title_gender">Gender</string>
    <string name="title_birth_date">Birth date</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_amount">Amount</string>
    <string name="title_location">Location</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_product_price">Product Price</string>
    <string name="title_product_quantity">Product Quantity</string>
    <string name="title_status_online">Online</string>
    <string name="title_status_offline">Offline</string>
    <string name="title_product_price_in_points">Product Price in Hygeia Stars</string>
    <string name="title_product_reward_in_points">Product Reward in Hygeia Stars</string>
    <string name="title_search">Search User</string>
    <string name="title_blog_title">Title</string>
    <string name="title_blog_content">Content</string>
    <string name="error_email_registered">The email you entered is not registered in our system.</string>
    <string name="error_email_format">The email you entered is invalid.</string>
    <string name="error_email_password_format">The email address or phone number you entered is invalid.</string>
    <string name="error_email_taken">This email is already in use.</string>
    <string name="error_password_incorrect">Incorrect password.</string>
    <string name="error_password_format">Password must be at least 8 characters long with combinations of uppercase letters, lowercase letters, numbers, and symbols.</string>
    <string name="error_password_same">You cannot change your password with the same as your current password.</string>
    <string name="error_password_matched">Passwords do not match.</string>
    <string name="error_old_password_matched">Current password do not match.</string>
    <string name="error_password_criteria">Password does not match the criteria.</string>
    <string name="error_birth_date">Sorry, you must be at least 11 years old to use this application.</string>
    <string name="error_phone_registered">The phone number you entered is not registered in our system.</string>
    <string name="error_phone_format">The phone number you entered is invalid.</string>
    <string name="error_phone_taken">This phone number is already in use.</string>
    <string name="error_phone_user_manager">This phone number is your phone number.</string>
    <string name="error_otp_incorrect">The one-time pin you entered is incorrect.</string>
    <string name="helper_forgot_password_email">We will send a one-time verification code to the phone number associated with your account.</string>
    <string name="btn_login">Login</string>
    <string name="btn_auto_login">Auto Login</string>
    <string name="btn_create_account">Create an account</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create_my_account">Create my account</string>
    <string name="btn_update_password">Update my password</string>
    <string name="btn_send">Send Code</string>
    <string name="btn_resend">Resend Code</string>
    <string name="btn_send_money">Send</string>
    <string name="btn_purchase">Purchase</string>
    <string name="btn_purchase_using_points">Use Stars</string>
    <string name="btn_request_money">Request</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_view_information">View my info</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_change_wallet_background">Change wallet background</string>
    <string name="btn_about_us">About Hygeia</string>
    <string name="btn_change">Change</string>
    <string name="btn_my_qr">My QR</string>
    <string name="btn_post">Post</string>
    <string name="btn_update_post">Update Post</string>
    <string name="btn_delete_post">Delete Post</string>
    <string name="btn_delete_machine">Delete Machine</string>
    <string name="btn_text_terms_and_conditions">By continuing, you accept our <a href="">terms and conditions</a>\nand <a href="">privacy policy</a>.</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_save">Save</string>
    <string name="chip_announcement">Announcement</string>
    <string name="chip_information">Information</string>
    <string name="chip_update">Update</string>
    <string name="hint_email_or_number">Enter email or phone number</string>
    <string name="hint_amount">Enter amount</string>
    <string name="hint_message">Enter message</string>
    <string name="title_enter_required">Please enter the required details</string>
    <string name="nav_home">Home</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_blog">Blog</string>
    <string name="nav_admin_tools">Admin Tools</string>
    <string name="nav_profile">Profile</string>
</resources>