<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/frgMainHome"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/frgMainTransactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/frgMainBlog"
        android:icon="@drawable/ic_nav_blog"
        android:title="@string/nav_blog" />
    <item
        android:id="@+id/frgMainAdminTools"
        android:icon="@drawable/ic_nav_admin"
        android:title="@string/nav_admin_tools" />
    <item
        android:id="@+id/frgMainSettings"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>