<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblHeadingRegular"
        style="@style/Text_H1_Regular"
        android:text="@string/h1_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblHeadingColored"
        style="@style/Text_H1_Colored"
        android:text="@string/app_name_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular" />

    <TextView
        android:id="@+id/lblDescription"
        style="@style/Text_Description"
        android:text="@string/desc_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailOrPhoneNumber"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elmnt_gap_xl"
        android:hint="@string/title_email_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailOrPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_password"
        app:endIconDrawable="@drawable/ic_eye_selector"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmailOrPhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnForgotPassword"
        style="@style/Btn_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mx"
        android:text="@string/btn_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnAutoLogin"
        style="@style/Btn_Primary"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/btn_stack_mb"
        android:text="@string/btn_auto_login"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Btn_Primary"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/btn_stack_mb"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnCreateAccount"
        style="@style/Btn_Secondary"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_create_account"
        app:layout_constraintBottom_toTopOf="@+id/lblAppVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/lblAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/neutral_500"
        android:textSize="@dimen/text_sm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>