<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActBlogAdd">

    <ImageButton
        android:id="@+id/btnBack"
        style="@style/Btn_Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lblHeadingRegular"
        style="@style/Text_H1_Regular"
        android:text="@string/h1_blog_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDescription"
        style="@style/Text_Description"
        android:text="@string/desc_blog_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular"
        tools:ignore="VisualLintLongText" />

    <HorizontalScrollView
        android:id="@+id/chipGroupScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elmnt_gap_md"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:ignore="VisualLintBounds">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAnnouncement"
                style="@style/Chip"
                android:checked="true"
                android:layout_marginStart="@dimen/mx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_announcement" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInformation"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_information" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipUpdate"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_update" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutTitle"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_blog_title"
        android:layout_marginTop="@dimen/elmnt_gap_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupScroll">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutContent"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_blog_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:gravity="top|left"
            android:maxLines="15"
            tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPost"
        style="@style/Btn_Primary"
        android:layout_width="match_parent"
        android:text="@string/btn_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>