<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActUserInfo">

    <ImageButton
        android:id="@+id/btnBack"
        style="@style/Btn_Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lblHeadingRegular"
        style="@style/Text_H1_Regular"
        android:text="@string/h1_user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDescription"
        style="@style/Text_Description"
        android:text="@string/desc_user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/lblH6PersonalInformation"
        style="@style/Text_H6_Title"
        android:text="@string/h6_personal_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutFullName"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblH6PersonalInformation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutGender"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutBirthDate"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_birth_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutGender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblH6AccountInformation"
        style="@style/Text_H6_Title"
        android:text="@string/h6_account_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutBirthDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblH6AccountInformation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPhoneNumber"
        style="@style/Txt_Layout_Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>